{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 571,
  "lineage": "dfac236d-22a4-700d-5c39-01925a5d673f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079fe213a5452176d",
            "association_id": "eipassoc-003d1d2d2ee2e6226",
            "domain": "vpc",
            "id": "eipalloc-079fe213a5452176d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b97d140a1017050d",
            "private_dns": "ip-192-168-1-54.ec2.internal",
            "private_ip": "192.168.1.54",
            "public_dns": "ec2-34-199-202-108.compute-1.amazonaws.com",
            "public_ip": "34.199.202.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nwg1"
            },
            "tags_all": {
              "Name": "nwg1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9855e864c38e6c5",
            "association_id": "eipassoc-0e58f7c01c8fb8e7e",
            "domain": "vpc",
            "id": "eipalloc-0a9855e864c38e6c5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0465dc8a8f81103c2",
            "private_dns": "ip-192-168-2-199.ec2.internal",
            "private_ip": "192.168.2.199",
            "public_dns": "ec2-54-157-146-132.compute-1.amazonaws.com",
            "public_ip": "54.157.146.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nwg2"
            },
            "tags_all": {
              "Name": "nwg2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:internet-gateway/igw-0345436347230251e",
            "id": "igw-0345436347230251e",
            "owner_id": "801455127377",
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-igw",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-igw",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0612a9bc26ade0ba3"
          },
          "dependencies": [
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079fe213a5452176d",
            "association_id": "eipassoc-003d1d2d2ee2e6226",
            "connectivity_type": "public",
            "id": "nat-0da4a1d330098c11e",
            "network_interface_id": "eni-0b97d140a1017050d",
            "private_ip": "192.168.1.54",
            "public_ip": "34.199.202.108",
            "subnet_id": "subnet-01f30edf85a60a513",
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-ngwa",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-ngwa",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_subnet.web1a",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9855e864c38e6c5",
            "association_id": "eipassoc-0e58f7c01c8fb8e7e",
            "connectivity_type": "public",
            "id": "nat-0760449e749bfa979",
            "network_interface_id": "eni-0465dc8a8f81103c2",
            "private_ip": "192.168.2.199",
            "public_ip": "54.157.146.132",
            "subnet_id": "subnet-0ca0ba9ab671c5e05",
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-ngwb",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-ngwb",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_subnet.web1b",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtapp1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:route-table/rtb-0448e6822806bdea3",
            "id": "rtb-0448e6822806bdea3",
            "owner_id": "801455127377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0da4a1d330098c11e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-rtprivate1a",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-rtprivate1a",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0612a9bc26ade0ba3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw1",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtapp1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:route-table/rtb-05f359a130c79609a",
            "id": "rtb-05f359a130c79609a",
            "owner_id": "801455127377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0760449e749bfa979",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-rtprivate1b",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-rtprivate1b",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0612a9bc26ade0ba3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw2",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:route-table/rtb-082c0b4c7d06fe4f2",
            "id": "rtb-082c0b4c7d06fe4f2",
            "owner_id": "801455127377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0345436347230251e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-rtpublic",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-rtpublic",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0612a9bc26ade0ba3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsub1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f925788106c48ddd",
            "route_table_id": "rtb-082c0b4c7d06fe4f2",
            "subnet_id": "subnet-01f30edf85a60a513"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtpub",
            "aws_subnet.web1a",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsub1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adcdfdb21346ec8e",
            "route_table_id": "rtb-082c0b4c7d06fe4f2",
            "subnet_id": "subnet-0ca0ba9ab671c5e05"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtpub",
            "aws_subnet.web1b",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsubapp1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009993d23d6ba8b69",
            "route_table_id": "rtb-0448e6822806bdea3",
            "subnet_id": "subnet-04dd78bd725a0162e"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.ngw1",
            "aws_route_table.rtapp1a",
            "aws_subnet.app1a",
            "aws_subnet.web1a",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsubapp1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a75f21db43105a09",
            "route_table_id": "rtb-05f359a130c79609a",
            "subnet_id": "subnet-0c112a2e038a4333e"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.rtapp1b",
            "aws_subnet.app1b",
            "aws_subnet.web1b",
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:subnet/subnet-04dd78bd725a0162e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dd78bd725a0162e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801455127377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-subnetapp1a",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-subnetapp1a",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0612a9bc26ade0ba3"
          },
          "dependencies": [
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:subnet/subnet-0c112a2e038a4333e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c112a2e038a4333e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801455127377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-subnetapp1b",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-subnetapp1b",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0612a9bc26ade0ba3"
          },
          "dependencies": [
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:subnet/subnet-01f30edf85a60a513",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f30edf85a60a513",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801455127377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-subnetweb1a",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-subnetweb1a",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0612a9bc26ade0ba3"
          },
          "dependencies": [
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:subnet/subnet-0ca0ba9ab671c5e05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca0ba9ab671c5e05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801455127377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-subnetweb1b",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-subnetweb1b",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0612a9bc26ade0ba3"
          },
          "dependencies": [
            "aws_vpc.vpcproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcproject",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801455127377:vpc/vpc-0612a9bc26ade0ba3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0032e648f7a556bde",
            "default_route_table_id": "rtb-0095a9408559c5623",
            "default_security_group_id": "sg-0c3793457419ff3f7",
            "dhcp_options_id": "dopt-0b669f17951990306",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0612a9bc26ade0ba3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0095a9408559c5623",
            "owner_id": "801455127377",
            "tags": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-vpc",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2021",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2021-dev-EKS-vpc",
              "Project": "EKS",
              "Teams": "DEL",
              "cloudProvider": "aws"
            }
          }
        }
      ]
    }
  ]
}